--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "koa-static": "^4.0.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.12.4",
+    "nodemailer": "^4.3.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
