--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jest": "^21.2.1",
     "log4js": "^2.3.4",
     "moment": "^2.18.1",
+    "node-telegram-bot-api": "^0.29.0",
     "react-emotion": "^7.2.0",
     "sinon": "^4.0.1",
     "style-loader": "^0.18.2",
