--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack",
     "tls:generate": "scripts/tls/generate.sh",
-    "start": "cross-env NODE_PATH=. node ./source/app.js",
+    "start": "NODE_PATH=. node ./source/app.js",
     "start:https": "cross-env NODE_HTTPS=1 npm start",
     "watch": "cross-env NODE_PATH=. nodemon --watch source ./source/app.js",
     "test": "cross-env NODE_PATH=. jest"
@@ -36,6 +36,7 @@
     "prop-types": "^15.5.10",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-grid-layout": "^0.16.0",
     "serialize-javascript": "^1.4.0"
   },
   "devDependencies": {
@@ -44,6 +45,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-emotion": "^7.1.0",
     "babel-plugin-import": "^1.4.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
